--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "babel-core": "^5.7.4",
     "babel-loader": "^5.3.2",
     "babel-runtime": "^5.7.0",
+    "datascript": "^0.11.5",
     "node-libs-browser": "^0.5.2",
     "react": "^0.13.3",
     "react-redux": "^0.2.2",
